# socialapp

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.rst  docker-compose.yml  pyproject.toml
scripts/: entrypoint.sh
socialapp/: manage.py
socialapp/accounts/: apps.py  models.py  serializers.py  urls.py  views.py
socialapp/core/utils/: collections.py  misc.py  settings.py
socialapp/project/: asgi.py  urls.py  wsgi.py
socialapp/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py  mongo.py
socialapp/project/settings/templates/: settings.dev.py
socialapp/user_details/: apps.py  models.py  serializers.py  urls.py  views.py
socialapp/utilities/: auth.py  blank.py  hash.py  regex.py  response.py
